@@ -26,7 +26,6 @@ chmod u+x ./global_setup.sh
 export AVD_VERSION=25
 #export ANDROID_BUILD_TOOLS_VERSION=25.0.3 
 #export SDK_VERSION=25.2.3
-export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
 export ANDROID_HOME=/usr/local/lib/android/sdk
 #mkdir -p $ANDROID_HOME
 #cd $ANDROID_HOME
@@ -44,6 +43,8 @@ export ANDROID_HOME=/usr/local/lib/android/sdk
 #
 echo "avds:"
 /usr/local/lib/android/sdk/tools/emulator -list-avds
+echo "Java home: "
+echo $JAVA_HOME
 
 echo "installing avd:"
 #echo y | ${ANDROID_HOME}/tools/android -s create avd --force --name android-${AVD_VERSION} \
